infra/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongo-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo 
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo 
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.25"
              memory: "256Mi"
---
apiVersion: v1
kind: Service 
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
